 public class Player {
        String Name;

        public Player(String name) {
            this.Name = name;
        }
    }

