 @startuml
'https://plantuml.com/class-diagram


class Player {
}

class Team {
}

class Match {
}

class Tournament {
}

class TournamentOrganizer {
}

Tournament o-- "1" TournamentOrganizer
Tournament *-- "8" Match
Tournament *-- Player
Tournament *-- Team
Match o-- "2" Team
Team o-- "2--*" Player

@enduml